--- a/css/template.css
+++ b/css/template.css
@@ -11,11 +11,13 @@ html, body{
 }
 
 #headCont {
+	overflow: hidden;
+  	position: fixed;
+  	top: 0;
 	background-color: black;
-	position: absolute;
 	width: 100%;
-	padding-top: 2%;
-	padding-bottom: 2%;
+	padding-top: 5px;
+	padding-bottom: 10px;
 }
 
 
@@ -55,7 +57,6 @@ input[name="searchVal"] {
 	color: white;
 	bottom: 0;
 	position:absolute;
-    bottom:0;
     width:100%;
     height:40px;	
 }
