--- a/css/register.css
+++ b/css/register.css
@@ -7,6 +7,7 @@
   left: 0;
   width: 700px;
   height: 250px;
+  color: black;
   background-color: #ccc;
   border-radius: 10px;
   border-style: solid;
